# playable-studio-interview

./: .env.example  .gitignore  README.md  app.py  chat_manager.py  pyproject.toml  storage.py  storage_service.py
.claude/commands/: new-interview.md
agent_wrapper/: __init__.py  agent.py  runner.py  types.py
agent_wrapper/config/: __init__.py  loader.py  schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  PlayablePreview.tsx
static/: index.html
