[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sett-chat"
version = "0.1.0"
description = "Simple chat UI powered by agent-wrapper"
requires-python = ">=3.10"
dependencies = [
    "agent-wrapper @ file:///Users/meitalavitan/agent-wrapper",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
sett-chat = "app:main"
